--- a/client/src/components/MapView/MapView.module.css
+++ b/client/src/components/MapView/MapView.module.css
@@ -4,6 +4,11 @@
   z-index: var(--z-map);
 }
 
+.mapInner {
+  width: 100%;
+  height: 100%;
+}
+
 .mapContainer :global(.gm-style) {
   font-family: inherit !important;
 }
